--- a/src/all_services/station_@.service
+++ b/src/all_services/station_@.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Demon Srtvice Foe Publishing Data
+Description=Demon Service For %i Station
 
 [Service]
 # Command to execute when the service is started
-ExecStart=/usr/bin/python3 /home/mgwooorl/practice/src/pub.py
+ExecStart=/usr/bin/python3 /home/mgwooorl/practice/src/pub.py %i
 
 # Disable Python's buffering of STDOUT and STDERR, so that output from the
 # service shows up immediately in systemd's logs
@@ -16,10 +16,9 @@ Restart=on-failure
 Type=notify
 
 # Use a dedicated user to run our service
-User=python_demo_service
+User=$(whoami)
 
 [Install]
-
 # Tell systemd to automatically start this service when the system boots
 # (assuming the service is enabled)
 WantedBy=default.target
