--- a/src/all_services/station_@.service
+++ b/src/all_services/station_@.service
@@ -3,7 +3,7 @@ Description=Demon Service For %i Station
 
 [Service]
 # Command to execute when the service is started
-ExecStart=/usr/bin/python3 /home/$user/practice/src/pub_sub/pub.py %i
+ExecStart=/usr/bin/python3 /home/%user/practice/src/pub_sub/pub.py %i
 
 # Disable Python's buffering of STDOUT and STDERR, so that output from the
 # service shows up immediately in systemd's logs
@@ -16,7 +16,7 @@ Restart=on-failure
 Type=notify
 
 # Use a dedicated user to run our service
-User=$user
+User=%user
 
 [Install]
 # Tell systemd to automatically start this service when the system boots
