--- a/src/all_services/station_@.service
+++ b/src/all_services/station_@.service
@@ -12,8 +12,7 @@ Environment=PYTHONUNBUFFERED=1
 # Automatically restart the service if it crashes
 Restart=on-failure
 
-# Our service will notify systemd once it is up and running
-Type=notify
+Type=simple
 
 # Use a dedicated user to run our service
 User=%user
