--- a/src/all_services/fastapi_@.service
+++ b/src/all_services/fastapi_@.service
@@ -13,7 +13,7 @@ Environment=PYTHONUNBUFFERED=1
 Restart=on-failure
 
 # Our service will notify systemd once it is up and running
-Type=notify
+Type=simple
 
 # Use a dedicated user to run our service
 User=%user
