now, when creating daemons, the path to the publisher is provided via sed

--- a/src/all_services/station_@.service
+++ b/src/all_services/station_@.service
@@ -3,7 +3,7 @@ Description=Demon Service For %i Station
 
 [Service]
 # Command to execute when the service is started
-ExecStart=/usr/bin/python3 /home/%user/practice/src/pub_sub/pub.py %i %date
+ExecStart=/usr/bin/python3 %file_path %i %date
 
 # Disable Python's buffering of STDOUT and STDERR, so that output from the
 # service shows up immediately in systemd's logs
